test/parse/bad-string-eof.txt
;;; ERROR: 1
(module (func) (export "
(;; STDERR ;;;
parse/bad-string-eof.txt:2:25: newline in string
(module (func) (export "
                        ^
parse/bad-string-eof.txt:3:1: syntax error, unexpected EOF, expecting TEXT
;;; STDERR ;;)
